# chimera-hackathon

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  chimera_agent.py  chimera_server.py  manage.py  mock_server.py  pyproject.toml  requirements.txt  setup.cfg
.cursor/plans/: stateful-forensics-implementation-plan-22c3b7e5.plan.md
.cursor/rules/: chimera.mdc
config/: base.yaml  llama_guard.yaml
config/scenarios/: aetheria.yaml  test_dummy.yaml  test_dummy_policy.yaml
data/: forensic_ledger.jsonl
data/real/: patients.json  public.txt  secret.txt
data/shadow/: patients.json  secret.txt
docs/: .cursorrules  ARCHITECTURE.md  CURSOR_DOCTRINE.md  LOGGING_SUMMARY.md  SCENARIO.md  TRIGGER_FLOW.md  current_capabilities.md  implementation_status.md  quickstart.md  research_agenda.md  status.md  technical_docs.md  transport_sanitization_plan.md
scenarios/: README.md  registry.yaml
scenarios/aetheria/: README.md  seeder.py
scripts/: sync_shadow_db.py
scripts/seeders/: __init__.py  base.py
src/: __init__.py  main.py
src/config/: __init__.py
src/dkca/: authority.py  keygen.py
src/guardrails/: config.py  llama_guard.py  manager.py
src/ifl/: ledger.py
src/ipg/: attack_logger.py  config.py  conversation_memory.py  interceptor.py  memory.py  multiturn_agent.py  policy.py  proxy.py  sanitizer.py  taint.py  transport.py
src/nsie/: judge.py  llm_clients.py
src/sdk/: chimera.py
src/utils/: __init__.py  llm_logger.py  logging_config.py  (+1 more)
tests/: README.md  conftest.py  langchain_agent.py  medical_demo.py  sdk_demo.py  test_interception.py
(+19 files in other folders)
